[project]
name = "a-gn-x-api-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
    "ruff>=0.15.4",
]
