[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["x_api_tui"]

[project]
name = "a-gn-x-api-tests-terminal-ui"
version = "0.1.0"
description = "Textual terminal UI for X tweet viewer/deleter"
requires-python = ">=3.12"
dependencies = [
    "a-gn-x-api-tests",
    "textual>=0.80.0",
]

[tool.uv.sources]
a-gn-x-api-tests = { workspace = true }

[project.scripts]
x-ui = "x_api_tui.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "requests-mock>=1.12.1",
    "ruff>=0.15.4",
    "textual-dev>=1.7.0",
]
